# network-capacity-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  synthetic_link_utilization.csv
diagrams/: architecture.mmd
docs/: architecture.md  business-impact.md  destroy.md  validation.md
notebooks/: capacity_forecasting_walkthrough.ipynb
reports/: example_forecast_summary.md  forecast_summary.md
screenshots/: README.md
scripts/: generate_synthetic_data.py  validate_sample_data.py
src/network_capacity_forecasting/: __init__.py  cli.py  data.py  features.py  model.py  report.py
tests/: conftest.py  test_data.py  test_model.py  test_report.py
