[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-capacity-forecasting"
version = "0.1.0"
description = "Synthetic network capacity forecasting and planning lab"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "joblib>=1.4",
  "matplotlib>=3.8",
]

[project.scripts]
capacity-forecast = "network_capacity_forecasting.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
